k8s/server.yml
# server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: jonaskingsley/food-app-server:v9
          ports:
            - containerPort: 5000

          startupProbe:
            httpGet:
              path: /api/status
              port: 5000
            failureThreshold: 30
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /api/status
              port: 5000
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/status
              port: 5000
            periodSeconds: 5

---
# server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 5000
      targetPort: 5000
